--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div id="time">9</div>
         <span id="abort"><a href="index1.html">Có</a></span>
         <span id="no">Không</span>
-        <span id="detonate">Hehee, con tró</span>
+        <span id="detonate">Hehee, sai gòi chọn lại</span>
     </div>
 
     <div id="turn-off"></div>
